tests/good/misc/decrement-for-0.pas
program DecrementFor0;

var i;
begin
    for i := 14 downto 0 do
        WriteLn(i)
end.
