tests/bad/const-div-by-zero.pas
program ConstDivByZero;

const a = 10 div 0;

begin
end.
